force-app/main/default/objects/Grille_GEG__mdt/Grille_GEG__mdt.object-meta.xml
<CustomObject>
    <label>Grille GEG</label>
    <pluralLabel>Grilles GEG</pluralLabel>
</CustomObject>