force-app/main/default/objects/Grille_GEG__mdt/fields/CeeMwh__c.field-meta.xml
<CustomField>
    <fullName>CeeMwh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>