force-app/main/default/objects/Grille_GEG__mdt/fields/Date_de_Validite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Validite__c</fullName>
    <label>Date de Validité</label>
    <type>Date</type>
</CustomField>