force-app/main/default/objects/Grille_GEG__mdt/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>