force-app/main/default/objects/Grille_GEG__mdt/fields/Duree_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Duree_Engagement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Durée d&apos;engagement</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>