force-app/main/default/objects/Grille_GEG__mdt/fields/Prix_HCH__c.field-meta.xml
<CustomField>
    <fullName>Prix_HCH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HCH</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>